--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,18 +1,14 @@
 backend:
   name: git-gateway
   identity_url: "https://footballposition-soccer-identity.netlify.app/.netlify/identity"
-  branch: main  # 确保与您的 GitHub 分支匹配
-
-publish_mode: editorial_workflow # 启用审核工作流（可选）
-
-media_folder: "static/images" # 图片上传路径 (相对根目录)
-public_folder: "/images"     # 访问图片的公共 URL
-
+  branch: main
+publish_mode: editorial_workflow
+media_folder: "static/images"
+public_folder: "/images"
 collections:
-  # Level 3: 文章内容 (Post)
   - name: "posts"
     label: "长尾文章 (Level 3)"
-    folder: "content/posts"  # Hugo 文章存放的文件夹
+    folder: "content/posts"
     create: true
     slug: "{{slug}}"
     fields:
