--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,16 +12,20 @@ collections:
     create: true
     slug: "{{slug}}"
     fields:
-    - label: "文章标题 (Title)"
-      name: "title"
-      widget: "string"
-    - label: "发布日期 (Date)"
-      name: "date"
-      widget: "datetime"
-    - label: "所属分类 (Level 2 Hub)"
-      name: "category"
-      widget: "select"
-      options: ["防守位置", "中场位置", "进攻位置"]
-    - label: "文章正文 (Body)"
-      name: "body"
-      widget: "markdown"
+      # --- 字段 1：文章标题 ---
+      - label: "文章标题 (Title)"
+        name: "title"
+        widget: "string"
+      # --- 字段 2：发布日期 ---
+      - label: "发布日期 (Date)"
+        name: "date"
+        widget: "datetime"
+      # --- 字段 3：所属分类 ---
+      - label: "所属分类 (Level 2 Hub)"
+        name: "category"
+        widget: "select"
+        options: ["防守位置", "中场位置", "进攻位置"]
+      # --- 字段 4：文章正文 ---
+      - label: "文章正文 (Body)"
+        name: "body"
+        widget: "markdown"
