--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,6 +2,7 @@ backend:
   name: git-gateway
   identity_url: "https://footballposition-soccer-identity.netlify.app/.netlify/identity"
   branch: main
+site_url: "https://footballposition-soccer.pages.dev"
 publish_mode: editorial_workflow
 media_folder: "static/images"
 public_folder: "/images"
@@ -12,20 +13,7 @@ collections:
     create: true
     slug: "{{slug}}"
     fields:
-      # --- 字段 1：文章标题 ---
-      - label: "文章标题 (Title)"
-        name: "title"
-        widget: "string"
-      # --- 字段 2：发布日期 ---
-      - label: "发布日期 (Date)"
-        name: "date"
-        widget: "datetime"
-      # --- 字段 3：所属分类 ---
-      - label: "所属分类 (Level 2 Hub)"
-        name: "category"
-        widget: "select"
-        options: ["防守位置", "中场位置", "进攻位置"]
-      # --- 字段 4：文章正文 ---
-      - label: "文章正文 (Body)"
-        name: "body"
-        widget: "markdown"
+      - {label: "文章标题 (Title)", name: "title", widget: "string"}
+      - {label: "发布日期 (Date)", name: "date", widget: "datetime"}
+      - {label: "所属分类 (Level 2 Hub)", name: "category", widget: "select", options: ["防守位置", "中场位置", "进攻位置"]}
+      - {label: "文章正文 (Body)", name: "body", widget: "markdown"}
