--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,8 +1,8 @@
 backend:
   name: git-gateway
-  identity_url: "https://footballposition-soccer-identity.netlify.app/.netlify/identity"
-  branch: main
-site_url: "https://footballposition-soccer.pages.dev"
+  identity_url: https://footballposition-soccer-identity.netlify.app/.netlify/identity
+  gateway_url: https://footballposition-soccer-identity.netlify.app/.netlify/git
+site_url: https://footballposition-soccer.pages.dev/
 publish_mode: editorial_workflow
 media_folder: "static/images"
 public_folder: "/images"
