--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,13 +8,32 @@ publish_mode: editorial_workflow
 media_folder: "static/images"
 public_folder: "/images"
 collections:
-  - name: "posts"
-    label: "长尾文章 (Level 3)"
-    folder: "content/posts"
+  - name: "attacking-positions"
+    label: "进攻位置"
+    folder: "content/attacking-positions"
     create: true
     slug: "{{slug}}"
     fields:
-      - {label: "文章标题 (Title)", name: "title", widget: "string"}
-      - {label: "发布日期 (Date)", name: "date", widget: "datetime"}
-      - {label: "所属分类 (Level 2 Hub)", name: "category", widget: "select", options: ["防守位置", "中场位置", "进攻位置"]}
-      - {label: "文章正文 (Body)", name: "body", widget: "markdown"}
+      - {label: "标题", name: "title", widget: "string"}
+      - {label: "发布日期", name: "date", widget: "datetime"}
+      - {label: "正文", name: "body", widget: "markdown"}
+
+  - name: "defensive-positions"
+    label: "防守位置"
+    folder: "content/defensive-positions"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "标题", name: "title", widget: "string"}
+      - {label: "发布日期", name: "date", widget: "datetime"}
+      - {label: "正文", name: "body", widget: "markdown"}
+
+  - name: "midfield-positions"
+    label: "中场位置"
+    folder: "content/midfield-positions"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "标题", name: "title", widget: "string"}
+      - {label: "发布日期", name: "date", widget: "datetime"}
+      - {label: "正文", name: "body", widget: "markdown"}
