--- a/hugo.toml
+++ b/hugo.toml
@@ -6,10 +6,10 @@ buildFuture = true
 paginate = 10
 
 [params]
-  // 首页显示文章的分区；保留 posts 即可
+  #首页显示文章的分区；保留 posts 即可
   mainSections = ["posts"]
 
-  // 开启 PaperMod 的 Home Info 块（没有文章也能展示）
+  #开启 PaperMod 的 Home Info 块（没有文章也能展示）
   [params.homeInfoParams]
     Title = "足球位置百科"
     Content = "欢迎来到本站。浏览上方菜单的各个栏目，或从 CMS 新建内容后这里会显示最新文章。"
