--- a/hugo.toml
+++ b/hugo.toml
@@ -3,7 +3,8 @@ languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = "PaperMod"
 buildFuture = true
-paginate = 10
+[pagination]
+  pagerSize = 10
 
 [params]
   #首页显示文章的分区；保留 posts 即可
