fix(cms): set branch main and repo for git-gateway

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,11 +1,12 @@
 backend:
   name: git-gateway
   branch: main
+  repo: diegobona/footballposition-soccer-site
   identity_url: https://footballposition-soccer-identity.netlify.app/.netlify/identity
   gateway_url: https://footballposition-soccer-identity.netlify.app/.netlify/git
 site_url: https://footballposition-soccer.pages.dev/
 display_url: https://footballposition-soccer.pages.dev/
-publish_mode: editorial_workflow
+publish_mode: simple
 media_folder: "static/images"
 public_folder: "/images"
 collections:
