fix(cms): set branch main and repo for git-gateway

--- a/hugo.toml
+++ b/hugo.toml
@@ -12,19 +12,19 @@ buildFuture = true
 
   #开启 PaperMod 的 Home Info 块（没有文章也能展示）
   [params.homeInfoParams]
-    Title = "足球位置百科"
-    Content = "欢迎来到本站。浏览上方菜单的各个栏目，或从 CMS 新建内容后这里会显示最新文章。"
+    Title = "Test"
+    Content = "Welcome"
 
 [menu]
   [[menu.main]]
-    name = "进攻位置"
+    name = "attacking-positions"
     url = "/attacking-positions/"
     weight = 10
   [[menu.main]]
-    name = "中场位置"
+    name = "midfield-positions"
     url = "/midfield-positions/"
     weight = 20
   [[menu.main]]
-    name = "防守位置"
+    name = "defensive-positions"
     url = "/defensive-positions/"
     weight = 30
