--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,5 +19,5 @@ collections:
     fields:
       - {label: "文章标题 (Title)", name: "title", widget: "string"}
       - {label: "发布日期 (Date)", name: "date", widget: "datetime"}
-      - {label: "所属分类 (Level 2 Hub)", name: "category", widget: "select", options: ["防守位置", "中场位置", "进攻位置"]}
+      - {label: "所属分类 (Level 2 Hub)", name: "category", widget: "select", options: ["防守位置", "中场位置", "进攻位置", "综述"]}
       - {label: "文章正文 (Body)", name: "body", widget: "markdown"}
